--- a/Firebase.CloudFirestore/source/Firebase.CloudFirestore/Firebase.CloudFirestore.csproj
+++ b/Firebase.CloudFirestore/source/Firebase.CloudFirestore/Firebase.CloudFirestore.csproj
@@ -34,7 +34,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FirebaseCloudFirestore.linkwith.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Extensions.cs" />
   </ItemGroup>
@@ -45,51 +44,42 @@
     <ObjcBindingCoreSource Include="Structs.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.csproj">
-      <Project>{87BB564C-85A8-4EC1-AD16-EC0A1ACCEE56}</Project>
-      <Name>Firebase.Analytics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Firebase.Auth\source\Firebase.Auth\Firebase.Auth.csproj">
-      <Project>{B6D38028-B1CF-4351-B53B-B5D35F19FC4A}</Project>
-      <Name>Firebase.Auth</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
       <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
       <Name>Firebase.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
-      <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
-      <Name>Firebase.InstanceID</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Firebase.CloudFirestore.targets" />
-  </ItemGroup>
-  <ItemGroup>
-    <ObjcBindingNativeLibrary Include="..\..\externals\BoringSSL">
-      <Link>BoringSSL</Link>
-    </ObjcBindingNativeLibrary>
-    <ObjcBindingNativeLibrary Include="..\..\externals\gRPC">
-      <Link>gRPC</Link>
-    </ObjcBindingNativeLibrary>
-    <ObjcBindingNativeLibrary Include="..\..\externals\gRPC-Core">
-      <Link>gRPC-Core</Link>
-    </ObjcBindingNativeLibrary>
-    <ObjcBindingNativeLibrary Include="..\..\externals\gRPC-ProtoRPC">
-      <Link>gRPC-ProtoRPC</Link>
-    </ObjcBindingNativeLibrary>
-    <ObjcBindingNativeLibrary Include="..\..\externals\gRPC-RxLibrary">
-      <Link>gRPC-RxLibrary</Link>
-    </ObjcBindingNativeLibrary>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
-    <Folder Include="Resources\gRPCCertificates.bundle\" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="..\..\externals\Pods\gRPC\etc\roots.pem">
-      <Link>Resources\gRPCCertificates.bundle\roots.pem</Link>
-    </BundleResource>
+    <NativeReference Include="..\..\externals\FirebaseFirestore.framework">
+      <Kind>Framework</Kind>
+      <Frameworks>MobileCoreServices</Frameworks>
+      <ForceLoad>True</ForceLoad>
+      <LinkerFlags>-ObjC -lc++</LinkerFlags>
+    </NativeReference>
+    <NativeReference Include="..\..\externals\grpc.framework">
+      <Kind>Framework</Kind>
+      <ForceLoad>True</ForceLoad>
+      <LinkerFlags>-lc++ -lz</LinkerFlags>
+    </NativeReference>
+    <NativeReference Include="..\..\externals\GRPCClient.framework">
+      <Kind>Framework</Kind>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
+    <NativeReference Include="..\..\externals\openssl.framework">
+      <Kind>Framework</Kind>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
+    <NativeReference Include="..\..\externals\ProtoRPC.framework">
+      <Kind>Framework</Kind>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
+    <NativeReference Include="..\..\externals\RxLibrary.framework">
+      <Kind>Framework</Kind>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
