[Firebase][ABTesting] Added new component version 2.0.0.0 * Added build.cake * Added externals files * Added nuget files * Added binding project * Updated Readme.md * Added component to manifest.yaml, poco.cake and update.cake files

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,3 +1,7 @@
+- Name: Firebase.iOS.ABTesting
+  BuildScript: ./Firebase.ABTesting/build.cake
+  TriggerPaths: [ Firebase.ABTesting ]
+  MacBuildTargets: [ samples, component ]
 - Name: Firebase.iOS.AdMob
   BuildScript: ./Firebase.AdMob/build.cake
   TriggerPaths: [ Firebase.AdMob ]
