[Firebase][RemoteConfig] Updated to version 3.0.0.0 * Updated the component version in Podfile, component.yaml, nuspec, targets and Readme files * Updated ApiDefinition * Added the component Native Reference in *.targets file * Updated the sample * Added the Firebase.ABTesting reference to binding project * Added Firebase.ABTesting License * Added missing close node in Firebase.ABTesting targets file * Added Firebase.ABTesting icons

--- a/Firebase.ABTesting/source/Firebase.ABTesting/Firebase.ABTesting.targets
+++ b/Firebase.ABTesting/source/Firebase.ABTesting/Firebase.ABTesting.targets
@@ -18,4 +18,5 @@
 			<LinkerFlags>-ObjC -lz</LinkerFlags>
 			<Frameworks>Security SystemConfiguration</Frameworks>
 		</NativeReference>
+	</ItemGroup>
 </Project>
