--- a/Firebase.RemoteConfig/component/component.yaml
+++ b/Firebase.RemoteConfig/component/component.yaml
@@ -1,4 +1,4 @@
-version: 2.0.3.3
+version: 3.0.0.0
 name: Firebase Remote Config for iOS
 id: firebaseiosremoteconfig
 publisher: Xamarin Inc.
@@ -12,18 +12,20 @@ docs-url: https://firebase.google.com/docs/remote-config/
 libraries:
   ios-unified:
   - ../output/Firebase.RemoteConfig.dll
+  - ../../Firebase.ABTesting/output/Firebase.ABTesting.dll
   - ../../Firebase.Analytics/output/Firebase.Analytics.dll
   - ../../Firebase.Core/output/Firebase.Core.dll
   - ../../Firebase.InstanceID/output/Firebase.InstanceID.dll
 is_shell: true
 packages:
   ios-unified:
-  - Xamarin.Firebase.iOS.RemoteConfig, Version=2.0.3.3
+  - Xamarin.Firebase.iOS.RemoteConfig, Version=3.0.0.0
 samples:
 - name: Remote Config Sample
   path: ../samples/RemoteConfigSample/RemoteConfigSample.sln
   removeProjects:
   - Firebase.RemoteConfig
+  - Firebase.ABTesting
   - Firebase.Analytics
   - Firebase.Core
   - Firebase.InstanceID
@@ -31,13 +33,14 @@ samples:
   - project: RemoteConfigSample
     packages:
     - Xamarin.Firebase.iOS.RemoteConfig
+    - Xamarin.Firebase.iOS.ABTesting
     - Xamarin.Firebase.iOS.Analytics
     - Xamarin.Firebase.iOS.Core
     - Xamarin.Firebase.iOS.InstanceID
   removeNodes:
   - //xNS:Import[contains (@Project, 'Firebase.RemoteConfig.targets')]
+  - //xNS:Import[contains (@Project, 'Firebase.ABTesting.targets')]
   - //xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]
-  - //xNS:Import[contains (@Project, 'Firebase.Core.targets')]
   - //xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]
 local-nuget-repo: ../../tmp-nugets
 no_build: true
