--- a/Firebase.RemoteConfig/nuget/Xamarin.Firebase.iOS.RemoteConfig.nuspec
+++ b/Firebase.RemoteConfig/nuget/Xamarin.Firebase.iOS.RemoteConfig.nuspec
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
     <id>Xamarin.Firebase.iOS.RemoteConfig</id>
     <title>Firebase APIs Remote Config iOS Library</title>
-    <version>2.1.0</version>
+    <version>3.0.0.0</version>
     <authors>Microsoft</authors>
     <owners>Microsoft</owners>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
@@ -15,6 +15,7 @@
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
         <dependency id="Xamarin.Build.Download" version="0.4.11" />
+        <dependency id="Xamarin.Firebase.iOS.ABTesting" version="2.0.0.0" />
         <dependency id="Xamarin.Firebase.iOS.Analytics" version="5.0.0.0" />
         <dependency id="Xamarin.Firebase.iOS.InstanceID" version="3.0.0.0" />
         <dependency id="Xamarin.Firebase.iOS.Core" version="5.0.0.0" />
