--- a/Firebase.PerformanceMonitoring/source/Firebase.PerformanceMonitoring/Firebase.PerformanceMonitoring.targets
+++ b/Firebase.PerformanceMonitoring/source/Firebase.PerformanceMonitoring/Firebase.PerformanceMonitoring.targets
@@ -2,40 +2,35 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebasePerformanceMonitoringAssemblyName>Firebase.PerformanceMonitoring, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebasePerformanceMonitoringAssemblyName>
-		<_FirebasePerformanceMonitoringItemsFolder>FPrfrmncM-1.1.0</_FirebasePerformanceMonitoringItemsFolder>
-		<_FirebaseSwizzlingUtilitiesItemsFolder>FSwzzlngU-1.0.0</_FirebaseSwizzlingUtilitiesItemsFolder>
+		<_FirebasePerformanceMonitoringItemsFolder>FPrfrmncM-2.0.0</_FirebasePerformanceMonitoringItemsFolder>
+		<_FirebasePerformanceMonitoringSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebasePerformanceMonitoringItemsFolder)\Frameworks\</_FirebasePerformanceMonitoringSDKBaseFolder>
+		<_FirebaseSwizzlingUtilitiesItemsFolder>FSwzzlngU-2.0.0</_FirebaseSwizzlingUtilitiesItemsFolder>
+		<_FirebaseSwizzlingUtilitiesBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseSwizzlingUtilitiesItemsFolder)\</_FirebaseSwizzlingUtilitiesBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebasePerformanceMonitoringItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/0f1736d821189eb0/FirebasePerformance-1.1.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/93b0449cb1b0fe2b/FirebasePerformance-2.0.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildDownload Include="$(_FirebaseSwizzlingUtilitiesItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/df57c2c6ac10229c/FirebaseSwizzlingUtilities-1.0.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/aa296ac3cf5c8687/FirebaseSwizzlingUtilities-2.0.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<XamarinBuildRestoreResources Include="_FirebasePerformanceMonitoringItems" />
+		<NativeReference Include="$(_FirebasePerformanceMonitoringSDKBaseFolder)FirebasePerformance.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC -lc++</LinkerFlags>
+			<Frameworks>CoreTelephony SystemConfiguration</Frameworks>
+		</NativeReference>
+		<NativeReference Include="$(_FirebaseSwizzlingUtilitiesBaseFolder)MethodSwizzling\Frameworks\FirebaseMethodSwizzler.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC</LinkerFlags>
+		</NativeReference>
+		<NativeReference Include="$(_FirebaseSwizzlingUtilitiesBaseFolder)ISASwizzling\Frameworks\FirebaseISASwizzler.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC</LinkerFlags>
+		</NativeReference>
 	</ItemGroup>
-	<Target Name="_FirebasePerformanceMonitoringItems">
-
-		<PropertyGroup>
-			<_FirebasePerformanceMonitoringSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebasePerformanceMonitoringItemsFolder)\Frameworks\</_FirebasePerformanceMonitoringSDKBaseFolder>
-			<_FirebaseSwizzlingUtilitiesBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseSwizzlingUtilitiesItemsFolder)\Frameworks\</_FirebaseSwizzlingUtilitiesBaseFolder>
-		</PropertyGroup>
-
-		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_FirebasePerformanceMonitoringSDKBaseFolder)FirebasePerformance.framework\FirebasePerformance">
-				<LogicalName>FirebasePerformance</LogicalName>
-				<AssemblyName>$(_FirebasePerformanceMonitoringAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-		</ItemGroup>
-
-		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_FirebaseSwizzlingUtilitiesBaseFolder)FirebaseSwizzlingUtilities.framework\FirebaseSwizzlingUtilities">
-				<LogicalName>FirebaseSwizzlingUtilities</LogicalName>
-				<AssemblyName>$(_FirebasePerformanceMonitoringAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-		</ItemGroup>
-
-	</Target>
 </Project>
