[Firebase] Firebase.CrashReporting was removed from manifest.yaml due it is now deprecated

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -30,10 +30,10 @@
   BuildScript: ./Firebase.Crashlytics/build.cake
   TriggerPaths: [ Firebase.Crashlytics ]
   MacBuildTargets: [ samples, component ]
-- Name: Firebase.iOS.CrashReporting
-  BuildScript: ./Firebase.CrashReporting/build.cake
-  TriggerPaths: [ Firebase.CrashReporting ]
-  MacBuildTargets: [ samples, component ]
+# - Name: Firebase.iOS.CrashReporting
+#   BuildScript: ./Firebase.CrashReporting/build.cake
+#   TriggerPaths: [ Firebase.CrashReporting ]
+#   MacBuildTargets: [ samples, component ]
 - Name: Firebase.iOS.Database
   BuildScript: ./Firebase.Database/build.cake
   TriggerPaths: [ Firebase.Database ]
