--- a/Firebase.Crashlytics/source/Firebase.Crashlytics/Firebase.Crashlytics.targets
+++ b/Firebase.Crashlytics/source/Firebase.Crashlytics/Firebase.Crashlytics.targets
@@ -2,8 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseCrashlyticsAssemblyName>Firebase.Crashlytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCrashlyticsAssemblyName>
-		<_FirebaseCrashlyticsItemsFolder>FCrshlytcs-3.10.1</_FirebaseCrashlyticsItemsFolder>
-		<_FabricItemsFolder>Fbrc-1.7.5</_FabricItemsFolder>
+		<_FirebaseCrashlyticsItemsFolder>FCrshlytcs-3.10.3</_FirebaseCrashlyticsItemsFolder>
+		<_FirebaseCrashlyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseCrashlyticsItemsFolder)\iOS\</_FirebaseCrashlyticsSDKBaseFolder>
+		<_FabricItemsFolder>Fbrc-1.7.8</_FabricItemsFolder>
+		<_FabricSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FabricItemsFolder)\iOS\</_FabricSDKBaseFolder>
 		<_FabricScriptName>upload-symbols</_FabricScriptName>
 
 		<!-- Properties used to upload dSYM symbols to Firebase when using Visual Studio for Mac -->
@@ -18,34 +20,26 @@
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseCrashlyticsItemsFolder)">
-			<Url>https://kit-downloads.fabric.io/cocoapods/crashlytics/3.10.1/crashlytics.zip</Url>
+			<Url>https://kit-downloads.fabric.io/cocoapods/crashlytics/3.10.3/crashlytics.zip</Url>
 			<Kind>Zip</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildDownload Include="$(_FabricItemsFolder)">
-			<Url>https://kit-downloads.fabric.io/cocoapods/fabric/1.7.5/fabric.zip</Url>
+			<Url>https://kit-downloads.fabric.io/cocoapods/fabric/1.7.8/fabric.zip</Url>
 			<Kind>Zip</Kind>
 		</XamarinBuildDownload>
-		<XamarinBuildRestoreResources Include="_FirebaseCrashlyticsItems" />
+		<NativeReference Include="$(_FirebaseCrashlyticsSDKBaseFolder)Crashlytics.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC -lc++ -lz</LinkerFlags>
+			<Frameworks>Security SystemConfiguration</Frameworks>
+		</NativeReference>
+		<NativeReference Include="$(_FabricSDKBaseFolder)Fabric.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC</LinkerFlags>
+			<Frameworks>UIKit</Frameworks>
+		</NativeReference>
 	</ItemGroup>
-	<Target Name="_FirebaseCrashlyticsItems">
-
-		<PropertyGroup>
-			<_FirebaseCrashlyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseCrashlyticsItemsFolder)\iOS\</_FirebaseCrashlyticsSDKBaseFolder>
-			<_FabricSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FabricItemsFolder)\iOS\</_FabricSDKBaseFolder>
-		</PropertyGroup>
-
-		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_FirebaseCrashlyticsSDKBaseFolder)Crashlytics.framework\Crashlytics">
-				<LogicalName>Crashlytics</LogicalName>
-				<AssemblyName>$(_FirebaseCrashlyticsAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_FabricSDKBaseFolder)Fabric.framework\Fabric">
-				<LogicalName>Fabric</LogicalName>
-				<AssemblyName>$(_FirebaseCrashlyticsAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-		</ItemGroup>
-
-	</Target>
 	
 	<Target Name="_FirebaseCrashlyticsUploadDSymToFirebaseMasterTarget"
 			Condition="'$(_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets)'!='' AND '$(_SdkIsSimulator)'=='False'"
