[US641239][Firebase][InstanceID] Updated to version 3.1.1.0 * Updated the component version in Podfile, targets, nuspec, AssemblyInfo and Readme files * Added Firebase.Core dependency * Fixed poco.yaml classes * This complete Tasks 642417 and 642406

--- a/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.csproj
+++ b/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.csproj
@@ -46,5 +46,11 @@
   <ItemGroup>
     <None Include="Firebase.InstanceID.targets" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
+      <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
+      <Name>Firebase.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
