--- a/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.targets
+++ b/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.targets
@@ -2,18 +2,19 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseInstanceIDAssemblyName>Firebase.InstanceID, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseInstanceIDAssemblyName>
-		<_FirebaseInstanceIDItemsFolder>FInstncID-3.0.0</_FirebaseInstanceIDItemsFolder>
+		<_FirebaseInstanceIDItemsFolder>FInstncID-3.1.1</_FirebaseInstanceIDItemsFolder>
 		<_FirebaseInstanceIDSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseInstanceIDItemsFolder)\Frameworks\</_FirebaseInstanceIDSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseInstanceIDItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/271d7b3d6321da3c/FirebaseInstanceID-3.0.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/60ebbeb9aed6cbc8/FirebaseInstanceID-3.1.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_FirebaseInstanceIDSDKBaseFolder)FirebaseInstanceID.framework">
 			<Kind>Framework</Kind>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC</LinkerFlags>
+			<Frameworks>Security</Frameworks>
 		</NativeReference>
 	</ItemGroup>
 </Project>
