[US641232][Firebase][Analytics] Updated to version 5.0.1.0 * Updated the component version in component.yaml, Podfile, nuspec, AssemblyInfo and Readme files * Updated the *.targets file * Updated the sample * Added sample app icons * Fixed Firebase.Analytics class in poco.yaml file * This complete tasks 642389, 642390, 642391 and 642392

--- a/Firebase.Analytics/samples/AnalyticsSample/AnalyticsSample/AnalyticsSample.csproj
+++ b/Firebase.Analytics/samples/AnalyticsSample/AnalyticsSample/AnalyticsSample.csproj
@@ -92,8 +92,20 @@
     <Reference Include="MonoTouch.Dialog-1" />
   </ItemGroup>
   <ItemGroup>
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Contents.json" />
     <ImageAsset Include="Assets.xcassets\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\120.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\152.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\167.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\180.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\20.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\29.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\40.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\58.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\60.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\76.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\80.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\87.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Contents.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
