--- a/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
+++ b/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
@@ -2,20 +2,20 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_GoogleMobileAdsAssemblyName>Google.MobileAds, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleMobileAdsAssemblyName>
-		<_GoogleMobileAdsId>FAdM-7.30.0</_GoogleMobileAdsId>
-		<_GoogleMobileAdsConsentId>GCnsnt-1.0.1</_GoogleMobileAdsConsentId>
+		<_GoogleMobileAdsId>FAdM-7.31.0</_GoogleMobileAdsId>
+		<_GoogleMobileAdsConsentId>GCnsnt-1.0.3</_GoogleMobileAdsConsentId>
 		<_GoogleMobileAdsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\frameworks\</_GoogleMobileAdsSDKBaseFolder>
-		<_GoogleMobileAdsConsentSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsConsentId)\googleads-consent-sdk-ios-1.0.1\PersonalizedAdConsent\PersonalizedAdConsent\</_GoogleMobileAdsConsentSDKBaseFolder>
+		<_GoogleMobileAdsConsentSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsConsentId)\googleads-consent-sdk-ios-1.0.3\PersonalizedAdConsent\PersonalizedAdConsent\</_GoogleMobileAdsConsentSDKBaseFolder>
 		<_GoogleMobileAdsCopyConsentFormMasterBeforeTargets>_CodesignNativeLibraries</_GoogleMobileAdsCopyConsentFormMasterBeforeTargets>
 		<_GoogleMobileAdsCopyConsentFormMasterDependsOnTargets>_GoogleMobileAdsCopyConsentForm</_GoogleMobileAdsCopyConsentFormMasterDependsOnTargets>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleMobileAdsId)">
-			<Url>https://dl.google.com/dl/cpdc/fc0cd3cd7f4a1f3b/Google-Mobile-Ads-SDK-7.30.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/d95f9069274c9b80/Google-Mobile-Ads-SDK-7.31.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildDownload Include="$(_GoogleMobileAdsConsentId)">
-			<Url>https://github.com/googleads/googleads-consent-sdk-ios/archive/v1.0.1.zip</Url>
+			<Url>https://github.com/googleads/googleads-consent-sdk-ios/archive/v1.0.3.zip</Url>
 			<Kind>Zip</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_GoogleMobileAdsSDKBaseFolder)GoogleMobileAds.framework">
@@ -25,8 +25,7 @@
 			<Frameworks>AudioToolbox AVFoundation CFNetwork CoreGraphics CoreMedia CoreMotion CoreTelephony CoreVideo GLKit MediaPlayer MessageUI MobileCoreServices OpenGLES QuartzCore Security StoreKit SystemConfiguration</Frameworks>
 			<WeakFrameworks>AdSupport JavaScriptCore SafariServices WebKit</WeakFrameworks>
 		</NativeReference>
-		<GoogleMobileAdsCopyResources 
-				Include="$(_GoogleMobileAdsConsentSDKBaseFolder)PersonalizedAdConsent.bundle\consentform.html" />
+		<GoogleMobileAdsCopyResources Include="$(_GoogleMobileAdsConsentSDKBaseFolder)PersonalizedAdConsent.bundle\consentform.html" />
 	</ItemGroup>
 
 	<Target Name="_GoogleMobileAdsCopyConsentFormMasterTargets"
