--- a/Firebase.AdMob/samples/AdMobSample/AdMobSample/Info.plist
+++ b/Firebase.AdMob/samples/AdMobSample/AdMobSample/Info.plist
@@ -33,6 +33,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcons.appiconset</string>
+	<string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
 </plist>
