--- a/Firebase.Analytics/samples/AnalyticsSample/AnalyticsSample/Info.plist
+++ b/Firebase.Analytics/samples/AnalyticsSample/AnalyticsSample/Info.plist
@@ -31,6 +31,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcons.appiconset</string>
+	<string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
 </plist>
