--- a/Firebase.Auth/samples/AuthSample/AuthSample/AuthSample.csproj
+++ b/Firebase.Auth/samples/AuthSample/AuthSample/AuthSample.csproj
@@ -96,20 +96,20 @@
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\Contents.json" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\120.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\152.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\167.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\180.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\20.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\29.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\40.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\58.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\60.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\76.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\80.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\87.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Contents.json" />
     <ImageAsset Include="Assets.xcassets\LaunchImage.launchimage\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\120.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\152.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\167.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\180.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\20.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\29.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\40.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\58.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\60.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\76.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\80.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\87.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
@@ -119,6 +119,7 @@
     <Folder Include="PhoneNumberAuth\" />
     <Folder Include="Models\" />
     <Folder Include="Models\Contexts\" />
+    <Folder Include="Assets.xcassets\AppIcon.appiconset\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
