--- a/Firebase.Auth/samples/AuthSample/AuthSample/Info.plist
+++ b/Firebase.Auth/samples/AuthSample/AuthSample/Info.plist
@@ -31,7 +31,7 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcons.appiconset</string>
+	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
