--- a/Firebase.DynamicLinks/samples/DynamicLinksSample/DynamicLinksSample/Info.plist
+++ b/Firebase.DynamicLinks/samples/DynamicLinksSample/DynamicLinksSample/Info.plist
@@ -33,7 +33,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcons.appiconset</string>
+	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
