--- a/Google.TagManager/externals/Podfile
+++ b/Google.TagManager/externals/Podfile
@@ -1,38 +1,45 @@
 
 =begin
 Last run GoogleTagManager installed:
-- FirebaseAnalytics (4.0.2)
-- FirebaseCore (4.0.3)
-- FirebaseInstanceID (2.0.0)
-- GoogleAnalytics (3.17.0)
-- GoogleTagManager (6.0.0)
-- GoogleUtilities (1.3.2)
+* FirebaseAnalytics (5.0.1)
+* FirebaseCore (5.0.5)
+* FirebaseInstanceID (3.1.1)
+* GoogleAnalytics (3.17.0)
+* GoogleSymbolUtilities (1.1.2)
+* GoogleTagManager (7.0.0)
+* GoogleToolboxForMac (2.1.4)
+* GoogleUtilities (1.3.2)
+* nanopb (0.3.8)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
-In .targets file, located in Google.TagManager binding, you can find:
-- GoogleTagManager (6.0.0)
-- GoogleUtilities (1.3.2)
-- GoogleSymbolUtilities (1.1.2)
+In Google.TagManager binding project, you can find the .targets file of:
+* GoogleTagManager (7.0.0)
+* GoogleUtilities (1.3.2)
+* GoogleSymbolUtilities (1.1.2)
 
-In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (4.0.2)
+In Google.Analytics binding project, you can find the .targets file of:
+* GoogleAnalytics (5.0.1)
 
-In .targets file, located in Firebase.Core binding, you can find:
-- FirebaseCore (4.0.3)
-- GoogleToolboxForMac (2.1.1)
+In Firebase.Analytics binding project, you can find the .targets file of:
+* FirebaseAnalytics (5.0.1)
 
-In .targets file, located in Firebase.InstanceID binding, you can find:
-- FirebaseInstanceID (2.0.0)
+In Firebase.InstanceID binding project, you can find the .targets file of:
+* FirebaseInstanceID (3.1.1)
+
+In Firebase.Core binding project, you can find the Native Reference of:
+* FirebaseCore (5.0.5)
+* GoogleToolboxForMac (2.1.4)
+* nanopb (0.3.8)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
 
-platform :ios, '7.0'
+platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'GoogleTagManager' do
-	pod 'GoogleTagManager', '6.0.0'
+	pod 'GoogleTagManager', '7.0.0'
 end
