--- a/Google.TagManager/source/Google.TagManager/Google.TagManager.targets
+++ b/Google.TagManager/source/Google.TagManager/Google.TagManager.targets
@@ -3,14 +3,17 @@
 
 	<PropertyGroup>
 		<_GoogleTagManagerAssemblyName>Google.TagManager, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleTagManagerAssemblyName>
-		<_GoogleTagManagerItemsFolder>GTagM-6.0.0</_GoogleTagManagerItemsFolder>
+		<_GoogleTagManagerItemsFolder>GTagM-7.0.0</_GoogleTagManagerItemsFolder>
+		<_GoogleTagManagerSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleTagManagerItemsFolder)\Frameworks\frameworks\</_GoogleTagManagerSDKBaseFolder>
 		<_GoogleUtilitiesItemsFolder>GUtlts-1.3.2</_GoogleUtilitiesItemsFolder>
+		<_GoogleUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleUtilitiesSDKBaseFolder>
 		<_GoogleSymbolUtilitiesItemsFolder>GSymblU-1.1.2</_GoogleSymbolUtilitiesItemsFolder>
+		<_GoogleSymbolUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleSymbolUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleSymbolUtilitiesSDKBaseFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleTagManagerItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/07041f585a34f209/GoogleTagManager-6.0.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/07041f585a34f209/GoogleTagManager-7.0.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildDownload Include="$(_GoogleUtilitiesItemsFolder)">
@@ -18,38 +21,25 @@
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildDownload Include="$(_GoogleSymbolUtilitiesItemsFolder)">
-            <Url>https://dl.google.com/dl/cpdc/7ecdffda6fbef4af/GoogleSymbolUtilities-1.1.2.tar.gz</Url>
-            <Kind>Tgz</Kind>
-        </XamarinBuildDownload>
-		<XamarinBuildRestoreResources Include="_GoogleTagManagerItems"/>
+			<Url>https://dl.google.com/dl/cpdc/7ecdffda6fbef4af/GoogleSymbolUtilities-1.1.2.tar.gz</Url>
+			<Kind>Tgz</Kind>
+		</XamarinBuildDownload>
+		<NativeReference Include="$(_GoogleTagManagerSDKBaseFolder)GoogleTagManager.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC -lsqlite3 -lz</LinkerFlags>
+			<Frameworks>AdSupport CoreTelephony JavaScriptCore SystemConfiguration UIKit</Frameworks>
+		</NativeReference>
+		<NativeReference Include="$(_GoogleUtilitiesSDKBaseFolder)GoogleUtilities.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC -lz</LinkerFlags>
+			<Frameworks>AddressBook CoreGraphics</Frameworks>
+		</NativeReference>
+		<NativeReference Include="$(_GoogleSymbolUtilitiesSDKBaseFolder)GoogleSymbolUtilities.framework">
+			<Kind>Framework</Kind>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC</LinkerFlags>
+		</NativeReference>
 	</ItemGroup>
-
-	<Target Name="_GoogleTagManagerItems">
-
-		<PropertyGroup>
-			<_GoogleTagManagerSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleTagManagerItemsFolder)\Frameworks\frameworks\</_GoogleTagManagerSDKBaseFolder>
-			<_GoogleUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleUtilitiesSDKBaseFolder>
-			<_GoogleSymbolUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleSymbolUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleSymbolUtilitiesSDKBaseFolder>
-		</PropertyGroup>
-
-		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_GoogleTagManagerSDKBaseFolder)GoogleTagManager.framework\GoogleTagManager">
-				<LogicalName>GoogleTagManager</LogicalName>
-				<AssemblyName>$(_GoogleTagManagerAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GoogleTagManagerSDKBaseFolder)GoogleTagManager.framework\Resources\TagManagerResources.bundle\TAGRuntime.js.dat">
-				<LogicalName>__monotouch_content_TagManagerResources.bundle_fTAGRuntime.js.dat</LogicalName>
-				<AssemblyName>$(_GoogleTagManagerAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GoogleUtilitiesSDKBaseFolder)GoogleUtilities.framework\GoogleUtilities">
-				<LogicalName>GoogleUtilities</LogicalName>
-				<AssemblyName>$(_GoogleTagManagerAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GoogleSymbolUtilitiesSDKBaseFolder)GoogleSymbolUtilities.framework\GoogleSymbolUtilities">
-                <LogicalName>GoogleSymbolUtilities</LogicalName>
-                <AssemblyName>$(_GoogleTagManagerAssemblyName)</AssemblyName>
-            </RestoreAssemblyResource>
-		</ItemGroup>
-		
-	</Target>
 </Project>
