[Firebase] Enhancement on some Makefiles * The externals task of F.CloudFirestore is now 3x faster * The externals task of F.Bit is now a bit faster * Removed unnecessary code in Makefile of G.SignIn

--- a/Firebase.CloudFirestore/externals/Makefile
+++ b/Firebase.CloudFirestore/externals/Makefile
@@ -11,8 +11,6 @@ Pods:
 	$(POD) install
 
 $(TARGETS):
-	@ $(MAKE) $@-iphoneos
-	@ $(MAKE) $@-iphonesimulator
 	@ $(eval libraryName=$(shell \
 	if [ "$@" == "gRPC-ProtoRPC" ]; then \
 		echo "ProtoRPC"; \
@@ -27,18 +25,24 @@ $(TARGETS):
 	else \
 		echo $@; \
 	fi))
-	@ lipo -create -output $(libraryName).framework/$(libraryName) $(libraryName).framework/$(libraryName) $@-iphonesimulator.framework/$(libraryName)
-	@ rm -rf $@-iphonesimulator.framework
+	@ if [ ! -d "./build/Release-iphoneos/$@/$(libraryName).framework" ]; then \
+		$(MAKE) $@-iphoneos; \
+		$(MAKE) $@-iphonesimulator; \
+	fi
+	@ if [ ! -d "./$(libraryName).framework" ]; then \
+		cp -R ./build/Release-iphoneos/$@/$(libraryName).framework ./; \
+		cp -R ./build/Release-iphonesimulator/$@/$(libraryName).framework/ ./$(libraryName)-iphonesimulator.framework; \
+		lipo -create -output $(libraryName).framework/$(libraryName) $(libraryName).framework/$(libraryName) $(libraryName)-iphonesimulator.framework/$(libraryName); \
+		rm -rf $(libraryName)-iphonesimulator.framework; \
+	fi
 
 %-iphoneos:
-	$(eval currentTarget=$(subst -iphoneos,,$@))
-	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphoneos -arch armv7 -arch arm64 -configuration Release clean build
-	@ find ./build/Release-iphoneos/$(currentTarget) -type d -name "*.framework" | xargs -I % mv % ./
+	@ $(eval currentTarget=$(subst -iphoneos,,$@))
+	@ $(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphoneos -arch armv7 -arch arm64 -configuration Release clean build
 
 %-iphonesimulator:
-	$(eval currentTarget=$(subst -iphonesimulator,,$@))
-	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphonesimulator -arch i386 -arch x86_64 -configuration Release clean build
-	@ find ./build/Release-iphonesimulator/$(currentTarget) -type d -name "*.framework" | xargs -I % mv % $@.framework
+	@ $(eval currentTarget=$(subst -iphonesimulator,,$@))
+	@ $(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphonesimulator -arch i386 -arch x86_64 -configuration Release clean build
 
 clean:
 	@ rm -rf Pods build *.framework
