--- a/Firebase.Core/externals/Makefile
+++ b/Firebase.Core/externals/Makefile
@@ -11,25 +11,30 @@ Pods:
 	$(POD) install
 
 $(TARGETS):
-	$(MAKE) $@-iphoneos
-	$(MAKE) $@-iphonesimulator
-	@ if [ "$@" == "leveldb-library" ]; then \
-		lipo -create -output leveldb.framework/leveldb leveldb.framework/leveldb leveldb-library-iphonesimulator.framework/leveldb; \
-		rm -rf leveldb-library-iphonesimulator.framework; \
+	@ $(eval libraryName=$(shell \
+	if [ "$@" == "leveldb-library" ]; then \
+		echo "leveldb"; \
 	else \
-		lipo -create -output $@.framework/$@ $@.framework/$@ $@-iphonesimulator.framework/$@; \
-		rm -rf $@-iphonesimulator.framework; \
+		echo $@; \
+	fi))
+	@ if [ ! -d "./build/Release-iphoneos/$@/$(libraryName).framework" ]; then \
+		$(MAKE) $@-iphoneos; \
+		$(MAKE) $@-iphonesimulator; \
+	fi
+	@ if [ ! -d "./$(libraryName).framework" ]; then \
+		cp -R ./build/Release-iphoneos/$@/$(libraryName).framework ./; \
+		cp -R ./build/Release-iphonesimulator/$@/$(libraryName).framework/ ./$(libraryName)-iphonesimulator.framework; \
+		lipo -create -output $(libraryName).framework/$(libraryName) $(libraryName).framework/$(libraryName) $(libraryName)-iphonesimulator.framework/$(libraryName); \
+		rm -rf $(libraryName)-iphonesimulator.framework; \
 	fi
 
 %-iphoneos:
-	$(eval currentTarget=$(subst -iphoneos,,$@))
-	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphoneos -arch armv7 -arch arm64 -configuration Release clean build
-	@ find ./build/Release-iphoneos/$(currentTarget) -type d -name "*.framework" | xargs -I % mv % ./
+	@ $(eval currentTarget=$(subst -iphoneos,,$@))
+	@ $(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphoneos -arch armv7 -arch arm64 -configuration Release clean build
 
 %-iphonesimulator:
-	$(eval currentTarget=$(subst -iphonesimulator,,$@))
-	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphonesimulator -arch i386 -arch x86_64 -configuration Release clean build
-	@ find ./build/Release-iphonesimulator/$(currentTarget) -type d -name "*.framework" | xargs -I % mv % $@.framework
+	@ $(eval currentTarget=$(subst -iphonesimulator,,$@))
+	@ $(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphonesimulator -arch i386 -arch x86_64 -configuration Release clean build
 
 clean:
 	@ rm -rf Pods build *.framework
