--- a/Google.MobileAds/externals/Podfile
+++ b/Google.MobileAds/externals/Podfile
@@ -2,7 +2,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
-use_framewroks!
+use_frameworks!
 
 target 'Google-Mobile-Ads-SDK' do
   pod 'Google-Mobile-Ads-SDK', '7.31.0'
