[US682188][Firebase][Core] Updated to version 5.1.2.0 * [Task683788] Updated the component version everywhere is needed * [Task682203] Updated the Readme.md file * [Task682204] Updated the Podfile file * [Task682206] Updated the ApiDefinition file * [Task682207] Updated the AssemblyInfo file

--- a/Firebase.Core/externals/Podfile
+++ b/Firebase.Core/externals/Podfile
@@ -18,7 +18,8 @@ install! 'cocoapods', :integrate_targets => false
 use_frameworks!
 
 target 'FirebaseCore' do
-	pod 'Firebase/CoreOnly', '5.4.0'
+	pod 'Firebase/CoreOnly', '5.7.0'
+	pod 'GoogleUtilities/Logger', '5.2.2'
 	pod 'GoogleToolboxForMac/NSData+zlib', '2.1.4'
 	pod 'GoogleToolboxForMac/NSDictionary+URLArguments', '2.1.4'
 	pod 'GoogleToolboxForMac/Logger', '2.1.4'
