--- a/Firebase.Analytics/externals/Podfile
+++ b/Firebase.Analytics/externals/Podfile
@@ -1,10 +1,11 @@
 =begin
 Last run FirebaseAnalytics installed:
-* Firebase (5.4.0)
-* FirebaseAnalytics (5.0.1)
-* FirebaseCore (5.0.5)
-* FirebaseInstanceID (3.1.1)
-* GoogleToolboxForMac (2.1.4)
+* Firebase (5.7.0)
+* FirebaseAnalytics (5.1.1)
+* FirebaseCore (5.1.2)
+* FirebaseInstanceID (3.2.1)
+* GoogleAppMeasurement (5.1.1)
+* GoogleUtilities (5.2.2)
 * nanopb (0.3.8)
 
 Check if main version or subversion number has changed. 
@@ -12,14 +13,15 @@ If yes, please, update *.targets files located in binding
 projects, also, update Podfile files if needed.
 
 In Firebase.Analytics binding project, you can find the .targets file of:
-* FirebaseAnalytics (5.0.1)
+* FirebaseAnalytics (5.1.1)
+* GoogleAppMeasurement (5.1.1)
 
 In Firebase.InstanceID binding project, you can find the .targets file of:
-* FirebaseInstanceID (3.1.1)
+* FirebaseInstanceID (3.2.1)
 
 In Firebase.Core binding project, you can find the Native Reference of:
-* FirebaseCore (5.0.5)
-* GoogleToolboxForMac (2.1.4)
+* FirebaseCore (5.1.2)
+* GoogleUtilities (5.2.2)
 * nanopb (0.3.8)
 =end
 
@@ -29,5 +31,6 @@ platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseAnalytics' do
-	pod 'Firebase/Analytics', '5.4.0'
+	pod 'Firebase/Analytics', '5.7.0'
+	pod 'GoogleAppMeasurement', '5.1.1'
 end
