--- a/Firebase.InstanceID/externals/Podfile
+++ b/Firebase.InstanceID/externals/Podfile
@@ -1,10 +1,19 @@
 =begin
+Last run FirebaseInstanceID installed:
+Installing FirebaseCore (5.1.2)
+Installing FirebaseInstanceID (3.2.1)
+Installing GoogleUtilities (5.2.2)
+
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets file located in binding 
 project, also, update Podfile file if needed.
 
 In Firebase.InstanceID binding project, you can find the .targets file of:
 * FirebaseInstanceID (3.2.1)
+
+In Firebase.Core binding project, you can find the Native Reference of:
+* FirebaseCore (5.1.2)
+* GoogleUtilities (5.2.2)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
