--- a/Firebase.PerformanceMonitoring/externals/Podfile
+++ b/Firebase.PerformanceMonitoring/externals/Podfile
@@ -1,14 +1,15 @@
 =begin
 Last run FirebasePerformance installed:
-* Firebase (5.4.0)
-* FirebaseAnalytics (5.0.1)
-* FirebaseCore (5.0.5)
-* FirebaseInstanceID (3.1.1)
-* FirebasePerformance (2.0.1)
-* FirebaseSwizzlingUtilities (2.0.0)
-* GTMSessionFetcher (1.1.15)
+* Firebase (5.7.0)
+* FirebaseAnalytics (5.1.1)
+* FirebaseCore (5.1.2)
+* FirebaseInstanceID (3.2.1)
+* FirebasePerformance (2.1.1)
+* GTMSessionFetcher (1.2.0)
+* GoogleAppMeasurement (5.1.2)
 * GoogleToolboxForMac (2.1.4)
-* Protobuf (3.6.0)
+* GoogleUtilities (5.2.3)
+* Protobuf (3.6.1)
 * nanopb (0.3.8)
 
 Check if main version or subversion number has changed. 
@@ -16,20 +17,21 @@ If yes, please, update *.targets files located in binding
 projects, also, update Podfile files if needed.
 
 In Firebase.PerformanceMonitoring binding project, you can find the .targets file of:
-* FirebasePerformance (2.0.1)
-* FirebaseSwizzlingUtilities (2.0.0)
+* FirebasePerformance (2.1.1)
 
 In Firebase.Analytics binding project, you can find the .targets file of:
-* FirebaseAnalytics (5.0.1)
+* FirebaseAnalytics (5.1.1)
+* GoogleAppMeasurement (5.1.2)
 
 In Firebase.InstanceID binding project, you can find the .targets file of:
-* FirebaseInstanceID (3.1.1)
+* FirebaseInstanceID (3.2.1)
 
 In Firebase.Core binding project, you can find the Native Reference of:
-* FirebaseCore (5.0.5)
-* GTMSessionFetcher (1.1.15)
+* FirebaseCore (5.1.2)
+* GTMSessionFetcher (1.2.0)
 * GoogleToolboxForMac (2.1.4)
-* Protobuf (3.6.0)
+* GoogleUtilities (5.2.3)
+* Protobuf (3.6.1)
 * nanopb (0.3.8)
 =end
 
@@ -39,6 +41,5 @@ platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebasePerformanceMonitoring' do
-	pod 'Firebase/Performance', '5.4.0'
-	pod 'FirebaseSwizzlingUtilities', '2.0.0'
+	pod 'Firebase/Performance', '5.7.0'
 end
